[tool.poetry]
name = "faster-pyspark-tests"
version = "0.1.0"
description = ""
authors = ["Sergey Ivanychev <sergeyivanychev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8<3.11"
pyspark = "^3.2.0"
delta-spark = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest-xdist = "^2.5.0"
pytest = "^7.1.2"
chispa = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
